--- a/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
+++ b/src/app/main/pages/andon/reports/dialogs/return-dialog/return-dialog.component.html
@@ -1,36 +1,30 @@
-<h2 mat-dialog-title>
-    <div class="container-header">
-        <button mat-icon-button>
-            <mat-icon>play_circle</mat-icon>
-            <span>
-                Retomar
-            </span>
-        </button>
-        <button mat-icon-button mat-dialog-close>
-            <mat-icon style="color: gray;">close</mat-icon>
-        </button>
-    </div>
-</h2>
+<div class="ms-dialog-header">
+    <mat-icon class="ms-dialog-header__icon">play_circle</mat-icon>
+    <h3 class="ms-dialog-header__title">Retomar</h3>
+    <span class="ms-fill"></span>
+    <button mat-icon-button class="ms-dialog-header__close" mat-dialog-close>
+        <mat-icon style="color: gray;">close</mat-icon>
+    </button>
+</div>
 <mat-divider></mat-divider>
-<div class="container-body">
 
-<mat-dialog-content class="mat-typography" style="color: gray;">
-    <form [formGroup]="returnForm" autocomplete="off" class="form" style="margin-left: 15px;" >
+<mat-dialog-content class="mat-typography" style="color: gray; margin-top: 24px">
+    <form [formGroup]="returnForm" autocomplete="off" class="form">
         <div class="form-container__form-inputs">
-            <mat-form-field appearance="outline" id="result" class="form__input" > 
+            <mat-form-field appearance="outline" id="result" class="form__input">
                 <mat-label>Comentarios</mat-label>
-                <textarea matInput placeholder="Comentarios" formControlName="comments" ></textarea>
+                <textarea matInput placeholder="Comentarios" formControlName="comments"></textarea>
                 <mat-error *ngIf="returnForm.controls['comments'].errors">
                     Campo <strong>requerido.</strong>
                 </mat-error>
             </mat-form-field>
-            
+
         </div>
 
-        <mat-card *ngFor="let img of images; let i = index;" class="form__image1" class="mat-elevation-z0" >
-            <a [href] = "img" target="_blank" style="cursor:zoom-in">
+        <mat-card *ngFor="let img of images; let i = index;" class="form__image1" class="mat-elevation-z0">
+            <a [href]="img" target="_blank" style="cursor:zoom-in">
                 <img [src]="img" *ngIf="img" class="form__image1--image">
-            </a>            
+            </a>
         </mat-card>
 
         <div class="dropzone" appDropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)"
@@ -38,25 +32,26 @@
             <p>Arrastra imagenes aqui</p>
             <div class="file">
                 <label class="file-label">
-                <input class="file-input" type="file" (change)="onDrop($event.target.files)">                    
-                <span class="file-cta">
-                    <span class="file-label">
-                    seleccione un imagen
+                    <input class="file-input" type="file" (change)="onDrop($event.target.files)">
+                    <span class="file-cta">
+                        <span class="file-label">
+                            seleccione un imagen
+                        </span>
                     </span>
-                </span>
                 </label>
             </div>
-            </div>
+        </div>
         <h3>Uploads</h3>
 
         <div *ngFor="let file of files">
-            <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)"> </app-upload-task> 
-        </div>                          
+            <app-upload-task [file]="file" [pathStorage]="pathStorage" (onNewImage)="addNewImage($event)">
+            </app-upload-task>
+        </div>
 
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="save()" > RETOMAR</button>
+    <button type="button" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="save()">
+        RETOMAR</button>
 </mat-dialog-actions>
-</div>
