--- a/src/app/main/pages/quality/analysis/analysis.component.html
+++ b/src/app/main/pages/quality/analysis/analysis.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="ms-container">
     <div class="header-container">
       <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">analytics</mat-icon>
       <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">Analisis</h1>
