🚧in results in quality

--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -138,7 +138,7 @@
                               <button mat-menu-item (click)="timeline(element)">
                                 <mat-icon>timeline</mat-icon> Línea de tiempo
                               </button>              
-                              <button mat-menu-item (click)="edit(element)">
+                              <button mat-menu-item (click)="edit(element, element.eventType)">
                                 <mat-icon>edit</mat-icon>Editar
                               </button> 
                               <button mat-menu-item (click)="deleteQuality(element)">
