--- a/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/acc-corrective-dialog/acc-corrective-dialog.component.html
@@ -45,8 +45,8 @@
                     <ng-container matColumnDef="state">
                         <th mat-header-cell *matHeaderCellDef  class="table__cell theader">Estado</th>
                         <td mat-cell *matCellDef="let element" class="table__cell">
-                            <span *ngIf="element.kit">Pendiente</span>
-                            <span *ngIf="!element.kit">Finalizado</span>
+                            <span *ngIf="element.kit">Finalizado</span>
+                            <span *ngIf="!element.kit"> Pendiente</span>
                     </ng-container>
 
                     <ng-container matColumnDef="dateEnd" >
