--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
@@ -21,7 +21,8 @@
         <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
         <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
         <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
-        <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ? data.createdBy.name
+        <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? (data.createdBy.name ?
+            data.createdBy.name
             : data.createdBy) : 'Sin asignar'}}
         </p>
         <p><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
@@ -32,6 +33,16 @@
         <p><span style="font-weight: bold;"> Tipo de ensayo :</span> {{data.kindOfTest ? data.kindOfTest : ''}}</p>
         <p><span style="font-weight: bold;"> Inspector :</span> {{data.finalizedBy ? (data.finalizedBy.name ?
             data.finalizedBy.name : data.finalizedBy) : 'Sin asignar'}}</p>
+        <p *ngIf="data.length"><span style="font-weight: bold;"> Longitud :</span> {{data.length ? data.length : ''}}
+            [mm]</p>
+        <mat-divider style="margin: 16px 0px"></mat-divider>
+        <ng-container *ngIf="data.extends">
+            <p style="font-weight: bold;">Ampliaciones</p>
+            <p *ngFor="let item of data.extends">
+                {{item ? item : ''}}</p>
+        </ng-container>
+
+
         <div style="margin-top: 30px;"></div>
         <mat-accordion>
             <mat-expansion-panel class="container-panel" *ngIf="inquiries$ | async as inquiries">
