--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.scss
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.scss
@@ -52,22 +52,22 @@
             align-self: center;
             border-radius: 20px 20px;
             margin-right: 15px;
-            
-            &-icon{
+
+            &-icon {
                 margin-right: 10px;
                 margin-left: 12px;
                 color: #cbcbcb;
                 width: 30px;
                 height: 35px;
             }
-            
-            &-input{
-               position: relative;
-               top: -5px;
-               font-family: "Montserrat", sans-serif;
-               color: #333333;
-               font-weight: 400;
-               width: 265px;
+
+            &-input {
+                position: relative;
+                top: -5px;
+                font-family: "Montserrat", sans-serif;
+                color: #333333;
+                font-weight: 400;
+                width: 265px;
             }
         }
 
@@ -98,7 +98,6 @@
                 color: #333333;
                 font-family: "Montserrat", sans-serif;
                 font-weight: 400;
-
             }
             &:focus {
                 outline: none;
@@ -125,17 +124,17 @@
     }
 }
 
-span.mat-option-text{
+span.mat-option-text {
     color: #333333;
 }
-.select-input{
-    color: #333333; 
+.select-input {
+    color: #333333;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     margin-top: 0px;
 }
 
-.form-select{
+.form-select {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -144,22 +143,22 @@ span.mat-option-text{
 .cards-container {
     display: flex;
     justify-content: space-evenly;
-    padding: 20px;
-    background: #f0eded;
+    padding: 20px 12px;
     display: grid;
-    grid-column-gap: 5px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-column-gap: 8px;
+    grid-row-gap: 24px;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
 }
 
 .box {
-    margin: 10px 15px;
+    // margin: 10px 15px;
     color: rgba(0, 0, 0, 0.87);
     box-sizing: border-box;
     background: #ffffff;
-    border-radius: 10px 10px 0px 0px;
+    padding: 12px;
     position: relative;
-    width: 200px;
+    width: 230px;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -171,7 +170,7 @@ span.mat-option-text{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 5px;
+    padding: 2px 0px;
 }
 
 .priority {
@@ -187,12 +186,6 @@ span.mat-option-text{
     font-family: Rubik;
     font-weight: bold;
     color: #828282;
-}
-
-::ng-deep .mat-icon-button {
-    width: 25px !important;
-    line-height: 20px !important;
-    height: 20px !important;
 }
 
 .info-box {
@@ -275,38 +268,27 @@ span.mat-option-text{
     }
 }
 
-
 input {
     border: none;
     border-radius: 0px 25px 25px 0px;
 }
 
-::placeholder {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.15px;
-    color: rgba(0, 0, 0, 0.6);
+.btn-event-internal {
+    background: #6200ee;
+    color: white;
 }
-
-.btn-event-internal{
-    background: #6200EE;
-    color: white;    
-}
-.btn-event-external{
-    background: #27AE60;
+.btn-event-external {
+    background: #27ae60;
     color: white;
 }
 
-.container-task{
+.container-task {
     background: #f0eded;
     height: 60px;
     position: relative;
 
-    &__pending-task{
-        background: #C4C4C4; 
+    &__pending-task {
+        background: #c4c4c4;
         color: black;
         border-radius: 10px;
         font-size: 1em;
@@ -316,21 +298,19 @@ input {
         top: 20%;
         left: 3%;
     }
-
 }
 
-.task-pending{
-    background: #FF2D2D;
+.task-pending {
+    background: #ff2d2d;
     color: white;
     padding: 0px 10px;
     border-radius: 5px;
 }
-.task-completed{
-    background: #D8D8D8;
+.task-completed {
+    background: #d8d8d8;
     color: white;
     padding: 0px 10px;
     border-radius: 5px;
 }
-
 
 //
