📦 🎨 add time line in quality

--- a/src/app/main/pages/quality/analysis/progress/dialogs/time-line-dialog/time-line-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/time-line-dialog/time-line-dialog.component.html
@@ -42,6 +42,14 @@
                     {{data.attentionTimeElapsed?.seconds | number : '2.'}}
                 </div>
             </div>
+            <div class="timer__time-line--processed">
+                <div>
+                    {{data.processTimeElapsed?.days | number : '2.'}} /
+                    {{data.processTimeElapsed?.hours | number : '2.'}} :
+                    {{data.processTimeElapsed?.minutes | number : '2.'}} :
+                    {{data.processTimeElapsed?.seconds | number : '2.'}}
+                </div>
+            </div>
             <img src="../../../../../../../assets/img-quality/timeline-s2.png" alt="" style="width: 100%; margin-top: 20px;">
         </div>
 
