--- a/src/app/main/pages/quality/external-events/external-events.component.html
+++ b/src/app/main/pages/quality/external-events/external-events.component.html
@@ -25,7 +25,7 @@
                     <mat-form-field appearance="outline" class="container-form__work__input"
                         [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
                         <mat-label>Componente</mat-label>
-                        <input matInput type="text" placeholder="Component" formControlName="component" />
+                        <input matInput type="text" placeholder="Componente" formControlName="component" />
                         <mat-error *ngIf="externalForm.controls['component'].errors">
                             Campo <strong>requerido.</strong>
                         </mat-error>
