--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -83,10 +83,10 @@
           <div class="timer-black" [ngStyle]="{'width.%': item.registryPercentageElapsed }">
           </div>
           <div class="progress-view">
-            {{item.registryTimeElapsed?.days | number : '2.'}} /
-            {{item.registryTimeElapsed?.hours | number : '2.'}} :
-            {{item.registryTimeElapsed?.minutes | number : '2.'}} :
-            {{item.registryTimeElapsed?.seconds | number : '2.'}}
+            {{item.processTimeElapsed?.days | number : '2.'}} /
+            {{item.processTimeElapsed?.hours | number : '2.'}} :
+            {{item.processTimeElapsed?.minutes | number : '2.'}} :
+            {{item.processTimeElapsed?.seconds | number : '2.'}}
           </div>
         </div>
       </div>
