--- a/src/app/main/pages/quality/analysis/results/dialogs/time-line-dialog/time-line-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/time-line-dialog/time-line-dialog.component.html
@@ -41,6 +41,22 @@
                     {{data.attentionTimeElapsed?.seconds | number : '2.'}}
                 </div>
             </div>
+            <div class="timer__time-line--processed">
+                <div>
+                    {{data.processTimeElapsed?.days | number : '2.'}} /
+                    {{data.processTimeElapsed?.hours | number : '2.'}} :
+                    {{data.processTimeElapsed?.minutes | number : '2.'}} :
+                    {{data.processTimeElapsed?.seconds | number : '2.'}}
+                </div>
+            </div>
+            <div class="timer__time-line--tracing">
+                <div>
+                    {{data.tracingTimeElapsed?.days | number : '2.'}} /
+                    {{data.tracingTimeElapsed?.hours | number : '2.'}} :
+                    {{data.tracingTimeElapsed?.minutes | number : '2.'}} :
+                    {{data.tracingTimeElapsed?.seconds | number : '2.'}}
+                </div>
+            </div>
             <img src="../../../../../../../assets/img-quality/timeline-s4.png" alt="" style="width: 100%; margin-top: 20px;">
         </div>
 
