--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.html
@@ -90,10 +90,9 @@
           <div class="timer-black" [ngStyle]="{'width.%': item.registryPercentageElapsed }">
           </div>
           <div class="progress-view">
-            {{item.registryTimeElapsed?.days | number : '2.'}} /
-            {{item.registryTimeElapsed?.hours | number : '2.'}} :
-            {{item.registryTimeElapsed?.minutes | number : '2.'}} :
-            {{item.registryTimeElapsed?.seconds | number : '2.'}}
+            {{item.tracingTimeElapsed?.hours | number : '2.'}} :
+            {{item.tracingTimeElapsed?.minutes | number : '2.'}} :
+            {{item.tracingTimeElapsed?.seconds | number : '2.'}}
           </div>
         </div>
       </div>
