--- a/src/app/main/pages/quality/analysis/records/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/records/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -77,12 +77,12 @@
                 <h3>Archivo adicional</h3>
                 <div class="container-file">
                     <mat-icon>insert_drive_file</mat-icon>
-                    <div *ngIf="nameFile">
-                        <a [href]="nameFile" class="container-file__name" >
-                            Descargar archivo
+                    <div *ngIf="urlFile">
+                        <a [href]="urlFile" class="container-file__name" >
+                            {{data.fileName}}
                         </a>
                     </div>
-                    <div *ngIf="!nameFile">
+                    <div *ngIf="!urlFile">
                          No tiene archivo
                     </div>
                     
