--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -3,7 +3,7 @@
 <div>
     <div class="ms-dialog-header">
         <mat-icon class="ms-dialog-header__icon">visibility</mat-icon>
-        <h3 class="ms-dialog-header__title"> Detalle evento externo </h3>
+        <h3 class="ms-dialog-header__title"> Detalle evento interno </h3>
         <span class="ms-fill"></span>
         <button mat-icon-button mat-dialog-close>
             <mat-icon>cancel</mat-icon>
@@ -50,13 +50,13 @@
                 <h3>Archivo adicional</h3>
                 <div class="container-file">
                     <mat-icon>insert_drive_file</mat-icon>
-                    <div *ngIf="nameFile">
-                        <a [href]="nameFile" class="container-file__name" >
+                    <div *ngIf="urlFile">
+                        <a [href]="urlFile" class="container-file__name" >
                             Descargar archivo
                         </a>
                     </div>
-                    <div *ngIf="!nameFile">
-                         No tiene archivo
+                    <div *ngIf="!urlFile">
+                         {{data.fileName}}
                     </div>
                     
                 </div>
