--- a/src/app/main/pages/quality/internal-events/internal-events.component.html
+++ b/src/app/main/pages/quality/internal-events/internal-events.component.html
@@ -12,10 +12,20 @@
             <h3 class="title-form">Información del evento</h3>
             <form [formGroup]="internalForm" autocomplete="off" class="container-form">
                 <div class="container-form__work">
-                    <mat-form-field appearance="outline" class="container-form__work__input"
-                        [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+
+                    <mat-form-field appearance="outline" id="result"  class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
                         <mat-label>Taller</mat-label>
-                        <input matInput type="text" placeholder="taller" formControlName="workShop" />
+                        <mat-select formControlName="workShop">
+                            <mat-option *ngFor="let item of workShopList" [value]="item">
+                                {{item.name}} 
+                            </mat-option>
+                        </mat-select>
+                        <mat-hint *ngIf="!(componentList)">
+                            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                            <p>Cargando lista ...</p>
+                        </mat-hint>
+    
                         <mat-error *ngIf="internalForm.controls['workShop'].errors">
                             Campo <strong>requerido.</strong>
                         </mat-error>
@@ -30,14 +40,24 @@
                         </mat-error>
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" class="container-form__work__input"
-                        [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
+                    <mat-form-field appearance="outline" id="result"  class="container-form__work__input"
+                    [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
                         <mat-label>Componente</mat-label>
-                        <input matInput type="text" placeholder="Componente" formControlName="component" />
+                        <mat-select formControlName="component">
+                            <mat-option *ngFor="let item of componentList" [value]="item">
+                                {{item.name}} 
+                            </mat-option>
+                        </mat-select>
+                        <mat-hint *ngIf="!(componentList)">
+                            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+                            <p>Cargando lista ...</p>
+                        </mat-hint>
+    
                         <mat-error *ngIf="internalForm.controls['component'].errors">
                             Campo <strong>requerido.</strong>
                         </mat-error>
                     </mat-form-field>
+
                     <mat-form-field appearance="outline" class="container-form__work__input"
                         [ngClass]="isMobile ? 'container-form__work__input--mobile' : 'container-form__work__input--desktop'">
                         <mat-label>Nro de parte</mat-label>
